--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "build": "rm -rf dist && tsc -p src",
+    "start": "http-server -c-1 -o -p 8875 .",
+    "pretest": "npm run build",
+    "test": "karma start karma.conf.js",
+    "posttest": "node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
+    "coverage": "http-server -c-1 -o -p 9875 ./coverage"
   },
   "license": "ISC",
   "dependencies": {
@@ -21,8 +27,16 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "http-server": "^0.9.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.7",
     "lite-server": "^2.1.0",
-    "typescript": "^1.7.5",
-    "typings":"^0.6.8"
+    "remap-istanbul": "^0.5.1",
+    "systemjs": "^0.19.22",
+    "typescript": "^1.8.7",
+    "typings": "^0.6.8"
   }
 }
