--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "http-server -c-1 -o -p 8875 .",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
     "postinstall": "typings install",
     "build": "rm -rf dist && tsc -p src",
-    "start": "http-server -c-1 -o -p 8875 .",
     "pretest": "npm run build",
     "test": "karma start karma.conf.js",
     "posttest": "node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
@@ -28,6 +27,7 @@
   "devDependencies": {
     "concurrently": "^2.0.0",
     "http-server": "^0.9.0",
+    "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
     "karma-chrome-launcher": "^0.2.2",
