--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lite": "lite-server",
     "typings": "typings",
     "postinstall": "typings install",
-    "build": "rm -rf dist && tsc -p src",
+    "build": "rm -rf dist && tsc -p .",
     "pretest": "npm run build",
-    "test": "karma start karma.conf.js",
+    "test": "karma start karma.config.js",
     "posttest": "node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
     "coverage": "http-server -c-1 -o -p 9875 ./coverage"
   },
