--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "http-server -c-1 -o -p 8875 .",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\"" ,
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
