--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.7",
-    "systemjs": "0.19.22",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "ng2-bootstrap": "^1.0.6",
+    "ng2-select": "^1.0.1-beta.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.22",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
