--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http-server": "^0.9.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
+    "jspm": "^0.16.31",
     "karma": "^0.13.21",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.5",
@@ -40,5 +41,9 @@
     "systemjs": "^0.19.22",
     "typescript": "^1.8.7",
     "typings": "^0.6.8"
+  },
+  "jspm": {
+    "dependencies": {},
+    "devDependencies": {}
   }
 }
